Attempt 1 to fix scroll behavior on mobile

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -4,6 +4,11 @@
 
 // PAGE CONTAINER
 .container.home {
+  &:has(.blog-content.mobile) {
+    overflow: hidden;
+    height: 80vh;
+  }
+
   // TITLTE
   .title-wrapper {
     h1 {
